# mpl-grid-configurator

./: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  setup.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/components/: ControlButton.tsx  FloatingControls.tsx  GridOverlay.tsx  InitialLoader.tsx  PreviewOverlay.tsx  Sidebar.tsx  Workspace.tsx
frontend/src/lib/: actions.tsx  api.tsx  apiCalls.tsx  callbacks.tsx  const.tsx  content.tsx  history.tsx  init.tsx  layout.tsx  restructure.tsx
mpl_grid_configurator/: __init__.py  apply.py  backend.py  changes.py  connect.py  debug.py  fasttrack.py  figure_editor.py  layout_editor.py  merge.py  merge_editor.py  rebuild.py  register.py  render.py  traverse.py  types.py  unnested_skunk.py
mpl_grid_configurator/backend/: __init__.py  api.py  profiler.py  profiler_new.py  sessions.py  types.py
tests/: changes.py  conftest.py  test_apply.py  test_connect.py  test_difficult_merge.py  test_editors.py  test_merge.py  test_merge_with_nodes.py  test_register.py  test_render.py  test_traverse.py  test_types.py  utils.py
tests/layouts/: merge_with_nodes.json5  merge_with_nodes.jsonc
