[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mpl-grid-configurator"
description = "Configure matplotlib grid layouts with an interactive web interface."
dynamic = ["version"]
authors = [{ name = "Tim Hörmann", email = "pypi@audivir.de" }]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorlog",
    "doctyper",
    "dotenv",
    "fastapi",
    "pyjwt",
    "lxml",
    "matplotlib",
    "pydantic",
    "servestatic",
    "typing_extensions",
    "uvicorn",
]

[project.optional-dependencies]
dev = ["pytest", "msgspec", "json-comments"]

[project.urls]
Homepage = "https://github.com/audivir/mpl-grid-configurator"
Repository = "https://github.com/audivir/mpl-grid-configurator"

[tool.setuptools]
dynamic = { version = { attr = "mpl_grid_configurator.__version__" } }

[tool.setuptools.packages.find]
include = ["mpl_grid_configurator*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",  # Dynamically typed expressions are disallowed
    "COM812",
    "D105",
    "D203",
    "D213",
    "D413",
    "EM101",
    "EM102",
    "FBT001",
    "FBT002",
    "FIX002",
    "PLC0415",
    "TD003",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D103", "INP001", "S101"]
